# src/services/api/docs/swagger.json
@@ -40,7 +40,7 @@
                 }
             }
         },
-        "/chats/settings": {
+        "/chats/platforms": {
             "get": {
                 "produces": [
                     "application/json"
@@ -130,7 +130,7 @@
             ],
             "properties": {
                 "settings": {
-                    "$ref": "#/definitions/flux.Settings"
+                    "$ref": "#/definitions/models.SettingsUser"
                 },
                 "user_id": {
                     "type": "string"
@@ -154,7 +154,7 @@
                 }
             }
         },
-        "flux.Platform": {
+        "models.Platform": {
             "type": "string",
             "enum": [
                 "domain"
@@ -163,7 +163,7 @@
                 "PlatformDomain"
             ]
         },
-        "flux.Settings": {
+        "models.SettingsUser": {
             "type": "object",
             "required": [
                 "platform"
@@ -176,7 +176,7 @@
                     "maxLength": 10,
                     "allOf": [
                         {
-                            "$ref": "#/definitions/flux.Platform"
+                            "$ref": "#/definitions/models.Platform"
                         }
                     ]
                 },
@@ -190,12 +190,12 @@
                 "tld": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/flux.TldSettings"
+                        "$ref": "#/definitions/models.TldSettings"
                     }
                 }
             }
         },
-        "flux.TldSettings": {
+        "models.TldSettings": {
             "type": "object",
             "properties": {
                 "name": {
